mistral and gpt3.5

--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.24",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "hnswlib-node": "^2.1.0",
+    "langchain": "^0.1.11",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
